# Edge-Detection-Acceleration

./: .gitignore  CMakeLists.txt  MILESTONE3.md  Makefile  README.md  TESTING_GUIDE.md  edge_detector  io_top3_experiments.md  report_4.23_packing.md
artifacts/: CifraOpenBus.v  build_bitstream.tcl  build_dut.tcl
include/: dut.hpp  gaussian.hpp  hysteresis.hpp  image.hpp  image_io.hpp  nms.hpp  sobel.hpp  threshold.hpp
output/: bird_edges.pgm  mona_lisa_edge.pgm
scripts/: kria_install_exp1.sh  kria_probe_cifra.sh  lab_install_exp1.sh  run_exp1.sh  run_exp1_auto.sh
src/: dut.cpp  dut_packed.cpp  dut_packed_csim.cpp  dut_tb.cpp  gaussian.cpp  hysteresis.cpp  image_io.cpp  main.cpp  nms.cpp  sobel.cpp  threshold.cpp
src/kria/: Makefile  host.cpp  host_packed.cpp
